# hse_cpp

./: CMakeLists.txt  main  main.cpp
2023-2024/bdz/b/: CMakeLists.txt  array.h  main.cpp
2023-2024/contest_5/: CMakeLists.txt  IShape.h  circle.h  point.h  polygon.h  ray.h  vector.h
2023-2024/contest_5/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  segment.cpp  vector.cpp
2023-2024/contest_7/: CMakeLists.txt  CMakePresets.json  unique_ptr.h
2023-2024/i_matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
2023-2024/june_4_tasks/: CMakeLists.txt  CMakePresets.json  main
2023-2024/kolloqium/: CMakeLists.txt  CMakePresets.json  Fraction.h  main  main.cpp
2024-2025/: CMakeLists.txt  example.cpp  main  main.cpp
2024-2025/.gigaide/: gigaide.properties
2024-2025/algosy/: CMakeLists.txt  avl_tree.cpp  main.cpp
a/: main.cpp
bdz/a/: main.cpp  matrix.h
bdz/b/: CMakeLists.txt  CMakePresets.json  array.h  main.cpp
bdz/e/: CMakeLists.txt  main.cpp  shared_ptr.h
bdz/f/: main.cpp  range.h
bdz/g/: main.cpp  unordered_set.h
bdz/hijk/: k.cpp
contest_1/b/: main.cpp
contest_1/f/: main
contest_1/l/: main.cpp
contest_1/m/: main.cpp
contest_1/n/: main
contest_1/o/: main.cpp
contest_2/c/: main.cpp
contest_2/g_is_digit/: main.cpp
contest_2/j_pointer_sort/: main.cpp
contest_2/k/: main
contest_2/k_recursive_reader/: main.cpp
contest_3/c_first_header/: sum.cpp  sum.h
contest_5/: CMakeLists.txt  IShape.cpp  IShape.h  line.cpp  line.h  main  main.cpp  point.cpp  point.h  polygon.cpp  polygon.h  ray.cpp  ray.h  segment.cpp  segment.h  vector.cpp  vector.h
contest_7/: main.cpp  unique_ptr.h  unique_ptr_public_test.cpp
i/: main.cpp
i_matrix/: main  main.cpp  matrix.cpp  matrix.h
june_4_tasks/: main.cpp
matrix/: main.cpp  matrix.h
(+151 files in other folders)
